2013-08-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac (AH_TOP): Simplify the generation of c-auto.h.

2013-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Use ../../am/rebuild.am.

2013-06-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexenc.c: Provide right console output on windows for both
	ptex and uptex if --sjis-terminal option is given. (from T. Tanaka).

2013-06-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexenc.c: Remove redundant lines in input_line2(), which are
	inconsistent with those lines in texmfmp.c.

2013-06-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: Update version number 1.3.1 => 1.3.2dev.

2013-06-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (*_la_LDFLAGS): Add -bindir for MinGW DLL.

2013-05-30  Karl Berry  <karl@tug.org>
	
	* TeX Live 2013.

2013-04-05  Karl Berry  <karl@tug.org>

	* version.ac: 1.3.1 to prepare for TL'13 pretest.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexenc.c: Use kpse_readable_file() with non-const arg.

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-09-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexenc.c: Define ptexenc_version_string as PTEXENCVERSION.

2012-08-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ptexenc/ptexenc.h: Correct set_enc_string() return type.

	Updates from W32TeX.
	* ptexenc.c (input_line2): Handle input files with Dos/Windows
	(CRLF) line endings.
	Various sjisterminal related changes.
	* unicode-jp.c: Update variation[] table.

2012-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: Update version number 1.3.0 => 1.3.1dev.

2012-03-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid 'differ in signedness' warnings.
	* ptexenc.c (write_hex): Cast buffer to 'char *'.

2012-02-29  Ken Brown  <kbrow1i@gmail.com>

	* Makefile.am (libptexenc_la_LIBADD): Add $(KPATHSEA_LIBS) as
	required with `-no-undefined' (at least for Cygwin).
